--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </style>
  </head>
  <body>
-  <p><img src="img/photo.png" width="130" height="130" class="leftimg">
+  <p><img src="IMG/photo.png" width="130" height="130" class="leftimg">
   <h3><center>Люди, помните, что вы идёте на рискъ!</center></h3>
      Если Вы видите эту страницу, то знайте, 
      что ресурсъ, переадресовавшій на эту страницу заражёнъ.
