--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
      Если Вы видите эту страницу, то знайте, 
      что ресурсъ, переадресовавшій на эту страницу заражёнъ.
      Вы можете закрыть эту страницу</p>
+     <h5><center>Эта страница безопасности создана командой <a href="https://flyconstant.ruok.org/">FlyConstant</a></center></h5
  </body>
 </html>
