--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
  </head>
  <body>
   <p><img src="IMG/photo.png" width="140" height="130" class="leftimg">
-  <h3><center>Люди, помните, что вы идёте на рискъ!</center></h3>
-     Если Вы видите эту страницу, то знайте, 
-     что ресурсъ, переадресовавшій на эту страницу заражёнъ.
-     Вы можете закрыть эту страницу</p>
+  <h3><center>Дорогой пользователь</center></h3>
+     Приносим извинения за доставленные неудобства.  Нам стало известно, что ресурс, который привел вас на эту страницу, поврежден.  В связи с этим мы не можем гарантировать точность и достоверность информации на этой странице.
+     Чтобы обеспечить вашу безопасность и безопасность при использовании нашего веб-сайта, мы приняли решение оставить этот предупреждающий баннер на месте до тех пор, пока поврежденный ресурс не будет демонтирован.
+     Мы ценим ваше понимание в этом вопросе и хотим заверить вас, что мы предпринимаем шаги для исправления ситуации.  А пока вы можете покинуть эту страницу и поискать другие ресурсы, которые могут быть более надежными.
+  </p>
      <br><br>
-     <h5><center>Эта страница безопасности создана командой <a href="https://flyconstant.ruok.org/">FlyConstant</a></center></h5
+     <h5><center>Команда <a href="https://flyconstant.ruok.org/">FlyConstant</a> 2023</center></h5>
  </body>
 </html>
