--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </style>
  </head>
  <body>
-  <p><img src="IMG/photo.png" width="140" height="130" class="leftimg">
+  <!-- <p><img src="IMG/photo.png" width="140" height="130" class="leftimg"> -->
   <h3><center>Дорогой пользователь</center></h3>
      Приносим извинения за доставленные неудобства.  Нам стало известно, что ресурс, который привел вас на эту страницу, поврежден.  В связи с этим мы не можем гарантировать точность и достоверность информации на этой странице.
      Чтобы обеспечить вашу безопасность и безопасность при использовании нашего веб-сайта, мы приняли решение оставить этот предупреждающий баннер на месте до тех пор, пока поврежденный ресурс не будет демонтирован.
