--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
  <body>
   <!-- <p><img src="IMG/photo.png" width="140" height="130" class="leftimg"> -->
   <h3><center>Дорогой пользователь</center></h3>
-     Приносим извинения за доставленные неудобства.  Нам стало известно, что ресурс, который привел вас на эту страницу, поврежден.  В связи с этим мы не можем гарантировать точность и достоверность информации на этой странице.
-     Чтобы обеспечить вашу безопасность и безопасность при использовании нашего веб-сайта, мы приняли решение оставить этот предупреждающий баннер на месте до тех пор, пока поврежденный ресурс не будет демонтирован.
-     Мы ценим ваше понимание в этом вопросе и хотим заверить вас, что мы предпринимаем шаги для исправления ситуации.  А пока вы можете покинуть эту страницу и поискать другие ресурсы, которые могут быть более надежными.
+      Уважаемый пользователь! Мы хотим обратить ваше внимание на то, что данный ресурс не активен и может быть поддельным или небезопасным для использования. Рекомендуем вам избегать использование данного ресурса и обращаться к надежным и проверенным ресурсам для получения нужной информации. 
+  Пожалуйста, будьте осторожны и защищайте свою безопасность в интернете.
+  Спасибо за внимание!
   </p>
      <br>
      <h5><center>Команда <a href="https://flyconstant.ruok.org/">FlyConstant</a> 2023</center></h5>
